feat: make `ggshield config unset instance` unset the default instance

--- a/changelog.d/20230807_180315_aurelien.gateau_config_set_instance.md
+++ b/changelog.d/20230807_180315_aurelien.gateau_config_set_instance.md
@@ -1,3 +1,3 @@
 ### Added
 
-- It is now possible to define the default instance using `ggshield config set instance <THE_INSTANCE_URL>`.
+- It is now possible to manipulate the default instance using `ggshield config`: `ggshield config set instance <THE_INSTANCE_URL>` defines the default instance, `ggshield config unset instance` removes the previously defined instance. The default instance can be printed with `ggshield config get instance` and `ggshield config list`.
