--- a/changelog.d/20240422_145951_salome.voltz_scrt_4442_ggshield_secret_scan_repo_ignores_exclusion_patterns.md
+++ b/changelog.d/20240422_145951_salome.voltz_scrt_4442_ggshield_secret_scan_repo_ignores_exclusion_patterns.md
@@ -1,3 +1,3 @@
 ### Fixed
 
-The option `--exclude PATTERN` is no longer ignored by the command `ggshield secret scan repo`.
+- The option `--exclude PATTERN` is no longer ignored by the command `ggshield secret scan repo`.
