fix(secret_ignore): Add tests

--- a/changelog.d/20240912_120216_salome.voltz_add_ignore_hash_cmd.md
+++ b/changelog.d/20240912_120216_salome.voltz_add_ignore_hash_cmd.md
@@ -1,3 +1,3 @@
 ### Added
 
-- Default behavior for `ggshield secret ignore` command to allow ignoring secrets using their hash with optional `--name` argument.
+- It is now possible to ignore a secret manually using `ggshield secret ignore SECRET_SHA --name NAME`.
