chore: edit release note

--- a/changelog.d/20241125_113845_severine.bonnechere_scrt_5123_before_next_ggshield_release.md
+++ b/changelog.d/20241125_113845_severine.bonnechere_scrt_5123_before_next_ggshield_release.md
@@ -17,16 +17,12 @@ Uncomment the section that is right (remove the HTML comment wrapper).
 
 -->
 
-### Changed
+<!-- ### Changed -->
 
-Warning message: Python 3.8 is no longer supported by the Python Software Foundation since October, 14th 2024. GGShield will soon require Python 3.9 or above to run.
-
-<!--
 ### Deprecated
 
-- A bullet item for the Deprecated category.
+- Added warning message about future removal of Python 3.8 support.
 
--->
 <!--
 ### Fixed
 
