chore: rename detector in detector_display_name

--- a/changelog.d/20250423_102414_salome.voltz_scrt_5438_ggshield_for_each_detected_secret_add_a_link_towards_our.md
+++ b/changelog.d/20250423_102414_salome.voltz_scrt_5438_ggshield_for_each_detected_secret_add_a_link_towards_our.md
@@ -13,8 +13,7 @@ Uncomment the section that is right (remove the HTML comment wrapper).
 
 ### Added
 
-- Extra information in scan results (detector name, detector group name and documentation URL).
-- Link to detector documentation in text output.
+- `ggshield secret scan` output now contains a link to the detector documentation for each secret found.
 
 <!--
 ### Changed
