--- a/changelog.d/20250820_163548_salome.voltz_scrt_5812_investigate_ggshield_running_into_an_ownership_issue_in_git.md
+++ b/changelog.d/20250820_163548_salome.voltz_scrt_5812_investigate_ggshield_running_into_an_ownership_issue_in_git.md
@@ -18,7 +18,7 @@ For top level release notes, leave all the headers commented out.
 
 -->
 
-### Changed
+### Fixed
 
 - Bypass git dubious ownership errors by default.
 
