--- a/changelog.d/20260217_102505_alexandre.pasmantier_relax_urllib3_pin.md
+++ b/changelog.d/20260217_102505_alexandre.pasmantier_relax_urllib3_pin.md
@@ -1,3 +1,3 @@
 ### Changed
 
-- Relaxed `urllib3` dependency pin from `~=2.2.2` to `>=2.2.2,<3`, allowing compatibility with newer urllib3 versions (#1160).
+- Relax `urllib3` dependency pin from `~=2.2.2` to `>=2.2.2,<3`, allowing compatibility with newer urllib3 versions (#1160).
